--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   display: flex;
-  min-height: 100vh;
+  height: 100vh;
   align-items: center;
   background-image: linear-gradient(25deg, #1e4751, #2f636f, #428090, #559eb1);
 }
